see RN2.7.0 (20250808)
- Support auto next media playback/download for ChangSi when long press on Play button.
- Ensure local media file fetching for playback is unique for selected hymnNo with proper HymnNo pattern matching algorithm. see ContentHandler#isFileExist().
- BackKey does not set the hidden Exo and YouTube Player UI to be visible, and just exit instead.
  Do not set addToBackStack(null) in Exo and YT player fragment creation; else custom OnBackPressedCallback is not called.
- Add support to hide ExoPlayer video UI view, use when device is in landscape mode.
- Add all missing lyrics scores for youth hymn number below 161.
- Migrate more deprecated onBackKey